--- a/style.css
+++ b/style.css
@@ -15,3 +15,11 @@
     width: 800px;
   }
 }
+.jahaz {
+  position: absolute;
+  bottom: 20px;
+  z-index: 2;
+  opacity: 0;
+  transition: all 4s;
+  rotate: 45deg;
+}
